[gd_scene load_steps=13 format=2]

[ext_resource path="res://Menu/LevelsScene/LevelsScene.gd" type="Script" id=1]
[ext_resource path="res://Assets/fonts/Angeme-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/buttons/btnPng2.png" type="Texture" id=3]
[ext_resource path="res://Assets/Backgrounds/menu_background.jpg" type="Texture" id=4]
[ext_resource path="res://Assets/buttons/nextGameBtn.png" type="Texture" id=5]
[ext_resource path="res://Assets/buttons/exitBtn.png" type="Texture" id=6]
[ext_resource path="res://Assets/levelsPictures/sandy_lvl/Over.png" type="Texture" id=7]
[ext_resource path="res://Assets/levelsPictures/sandy_lvl/sandyHouseFull.png" type="Texture" id=8]
[ext_resource path="res://Assets/audios/muzyka-iz-multfilma-spanch-gubka-bob-kvadratnye-shtany.mp3" type="AudioStream" id=9]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 33
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 66
outline_color = Color( 1, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 2 )

[node name="LevelsScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 512, 300 )
scale = Vector2( 0.8, 0.833333 )
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="."]
margin_left = 408.0
margin_top = 64.0
margin_right = 577.0
margin_bottom = 124.0
custom_colors/font_color = Color( 1, 0.721569, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Уровни"

[node name="leftBtn" type="TouchScreenButton" parent="."]
position = Vector2( 408, 361.65 )
scale = Vector2( -0.601759, 0.640629 )
normal = ExtResource( 5 )
pressed = ExtResource( 5 )

[node name="rightBtn" type="TouchScreenButton" parent="."]
position = Vector2( 576, 360 )
scale = Vector2( 0.575163, 0.651852 )
normal = ExtResource( 5 )
pressed = ExtResource( 5 )

[node name="selectBtn" type="TouchScreenButton" parent="."]
position = Vector2( 392, 352 )
scale = Vector2( 0.666667, 0.346667 )
normal = ExtResource( 3 )
pressed = ExtResource( 3 )

[node name="exitBtn" type="TouchScreenButton" parent="."]
scale = Vector2( 0.716418, 0.705882 )
normal = ExtResource( 6 )
pressed = ExtResource( 6 )

[node name="Label2" type="Label" parent="."]
margin_left = 408.0
margin_top = 376.0
margin_right = 580.0
margin_bottom = 436.0
custom_colors/font_color = Color( 0, 0.882353, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "Купить"

[node name="coinText" type="Label" parent="."]
margin_left = 96.0
margin_top = 160.0
margin_right = 221.0
margin_bottom = 194.0
custom_colors/font_color = Color( 0.403922, 0.807843, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "Монеты: "

[node name="over" type="Sprite" parent="."]
position = Vector2( 496, 248 )
scale = Vector2( 0.264, 0.339 )
texture = ExtResource( 7 )

[node name="full" type="Sprite" parent="."]
visible = false
position = Vector2( 496, 248 )
scale = Vector2( 0.264, 0.339 )
texture = ExtResource( 8 )

[node name="price" type="Label" parent="."]
margin_left = 448.0
margin_top = 448.0
margin_right = 546.0
margin_bottom = 515.0
custom_colors/font_color = Color( 0.388235, 1, 0.662745, 1 )
custom_fonts/font = SubResource( 3 )
text = "150"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
autoplay = true

[connection signal="pressed" from="leftBtn" to="." method="leftBtn_pressed"]
[connection signal="pressed" from="rightBtn" to="." method="rightBtn_pressed"]
[connection signal="pressed" from="selectBtn" to="." method="selectBtn_pressed"]
[connection signal="pressed" from="exitBtn" to="." method="exitBtn_pressed"]
